tests/snapshots/cli__remove@let_wrapped_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/let_wrapped.flake.nix"
    - "--diff"
    - rm
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -1,6 +1,5 @@
 let
   system = "x86_64-linux";
 in {
-  inputs.nixpkgs.url = "github:nixos/nixpkgs";
-  outputs = { self, nixpkgs }: { };
+  outputs = { self }: { };
 }

----- stderr -----
