tests/snapshots/cli__remove@root_alt_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root_alt.flake.nix"
    - "--diff"
    - rm
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -2,21 +2,16 @@
   description = "Manage your flake inputs comfortably.";

   inputs = {
-    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

     flake-utelinos.url = "github:numtide/flake-utils";

     rust-overlay = {
-      url = "github:oxalica/rust-overlay";
       inputs = {
-        nixpkgs.follows = "nixpkgs";
         flake-utils.follows = "flake-utils";
       };
     };
     crane = {
-      url = "github:ipetkov/crane";
       inputs = {
-        nixpkgs.follows = "nixpkgs";
         rust-overlay.follows = "rust-overlay";
         flake-utils.follows = "flake-utils";
       };

----- stderr -----
