tests/snapshots/cli__remove@toplevel_nesting_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toplevel_nesting.flake.nix"
    - "--diff"
    - rm
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -1,17 +1,13 @@
 {
   description = "toplevel nesting";

-  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
-
   inputs.rust-overlay = {
     url = "github:oxalica/rust-overlay";
-    inputs.nixpkgs.follows = "nixpkgs";
     inputs.flake-utils.follows = "flake-utils";
   };

   inputs.crane = {
     url = "github:ipetkov/crane";
-    inputs.nixpkgs.follows = "nixpkgs";
     inputs.rust-overlay.follows = "rust-overlay";
     inputs.flake-utils.follows = "flake-utils";
   };

----- stderr -----
