tests/snapshots/cli__remove_nonexistent@root_nonexistent-input.snap
---
source: tests/cli.rs
assertion_line: 318
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--diff"
    - rm
    - nonexistent-input
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: could not remove input 'nonexistent-input'
