tests/snapshots/cli__toggle_diff@toggle_block_synthesize_block.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toggle_block.flake.nix"
    - "--diff"
    - toggle
    - rust-overlay
    - "github:a-kenji/rust-overlay"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -4,7 +4,8 @@
   inputs = {
     nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
     rust-overlay = {
-      url = "github:oxalica/rust-overlay";
+      # url = "github:oxalica/rust-overlay";
+      url = "github:a-kenji/rust-overlay";
       inputs.nixpkgs.follows = "nixpkgs";
     };
   };

----- stderr -----
